[package]
name = "jontecli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
rss = "2.0.1"
whoami = "1.2.1"
term = "0.7"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }